# scc-modules

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: command_read.h
src/: CMakeLists.txt  command_read.cpp  main.cpp
test/: CMakeLists.txt  fake_test.cpp
test/argument_parsing/: test_parse_arguments.cpp  test_parse_arguments_1.cpp  test_parse_arguments_2.cpp
